[gd_scene load_steps=5 format=3 uid="uid://bedcwafqj3d4r"]

[ext_resource type="Script" path="res://scenes/difficulty_menu.gd" id="1_1idl0"]
[ext_resource type="Theme" uid="uid://i6g0q4eu2djh" path="res://assets/fonts/theme.tres" id="1_qkxw3"]

[sub_resource type="InputEventKey" id="InputEventKey_fhgmq"]
device = -1
keycode = 4194305

[sub_resource type="Shortcut" id="Shortcut_ggc27"]
events = [SubResource("InputEventKey_fhgmq")]

[node name="DifficultyMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1idl0")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -108.5
offset_right = 160.0
offset_bottom = 108.5
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_qkxw3")
text = "DIFFICULTY"

[node name="ColorRect" type="ColorRect" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 5)
layout_mode = 2

[node name="Easy" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_qkxw3")
text = "easy"

[node name="Medium" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_qkxw3")
text = "medium
"

[node name="Hard" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_qkxw3")
text = "hard
"

[node name="Chinese" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_qkxw3")
text = "chinese
"

[node name="Back" type="Button" parent="."]
clip_contents = true
custom_minimum_size = Vector2(50, 36)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -108.0
offset_top = -56.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("1_qkxw3")
theme_override_font_sizes/font_size = 20
shortcut = SubResource("Shortcut_ggc27")
text = "back
"

[connection signal="pressed" from="VBoxContainer/Easy" to="." method="_on_easy_pressed"]
[connection signal="pressed" from="VBoxContainer/Medium" to="." method="_on_medium_pressed"]
[connection signal="pressed" from="VBoxContainer/Hard" to="." method="_on_hard_pressed"]
[connection signal="pressed" from="VBoxContainer/Chinese" to="." method="_on_chinese_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
